# shacl-path-query-generator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
shacl_path_query/: __init__.py  flatten.py  model.py  parser.py
tests/: test_flatten.py  test_parser.py
