[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shacl-path-query-generator"
version = "0.1.4"
description = "Translate SHACL complex paths into SPARQL CONSTRUCT queries with intermediate variable expansion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Zenon Zacouris", email = "zenon.zacouris@tum.de" }
]

dependencies = [
  "rdflib==7.1.4"
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/zenon-z/shacl-path-query-generator"


